--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
 
 html, body {
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
   background-color: black;
 }
 
@@ -29,4 +29,12 @@ section#phone {
   height: 627px;
   width: 311px;
   background: url('../imagens/frame-iphone.png');
+}
+
+iframe#tela {
+  position: relative;
+  top: 80px;
+  left: 22px;
+  width: 269px;
+  height: 471px;
 }
