--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,11 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
+html,
+body {
   height: 100vh;
   width: 100vw;
   background-color: black;
@@ -39,7 +40,21 @@ iframe#tela {
   height: 471px;
 }
 
+section#redes-sociais {
+  text-align: right;
+}
+
 section#redes-sociais img {
   width: 50px;
   margin: 10px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+  box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+  border: 2px solid rgba(255, 255, 255, 0.637);
+  transform: translate(-3px, -3px);
+  box-shadow: 5px, 5px, 10px rgba(0, 0, 0, 0.173);
+  transition: transform .5s, border 1s;
 }
